--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,36 +1,17 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
-</div>
-
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
-    <ul>
-      <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="http://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-    </ul>
-  </div>
+<div class="row">
+  <%= for event <- @events do %>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/pic.jpg" alt="...">
+        <div class="caption">
+          <h3><%= event.name %></h3>
+          <p class="text-muted"><%= event.eventtime %></p>
+          <p><%= String.slice(event.description, 0, 93)%>...</p>
+          <p>
+            <p><a href="<%= event_path(@conn, :show, event) %>" class="btn btn-primary" role="button"> View </a></p>
+          </p>
+        </div>
+      </div>
+    </div>
+  <%end%>
 </div>
