--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -14,14 +14,14 @@
 
   <body>
     <div class="container">
-      <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header>
+      <p>
+        <%= if current_student(@conn) do %>
+          You are logged in
+          <%= link "logout", to: authentication_path(@conn, :delete), method: :delete, class: "btn btn-primary" %>
+        <% else %>
+            <%= link "login", to: session_path(@conn, :new)%>
+        <% end %>
+      </p>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
