--- a/web/templates/event/index.html.eex
+++ b/web/templates/event/index.html.eex
@@ -1,20 +1,20 @@
 <div style="padding-bottom: 5px;">
-  <%= link "Add event", to: event_path(@conn, :new), class: "btn btn-primary"%>
+  <%= link "Add event", to: student_event_path(@conn, :new, @student), class: "btn btn-primary"%>
 </div>
 
 <div class="row">
   <%= for event <- @events do %>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-          <%= link "Delete", to: event_path(@conn, :delete, event), method: :delete, data: [confirm: "Are you sure?"],
+          <%= link "Delete", to: student_event_path(@conn, :delete, @student, event), method: :delete, data: [confirm: "Are you sure?"],
           class: "btn btn-danger glyphicon glyphicon-remove", style: "margin-bottom: 5px;" %>
         <img src="/images/pic.jpg" alt="...">
         <div class="caption">
           <h3><%= event.name %></h3>
           <p class="text-muted"><%= event.eventtime %></p>
           <p><%= String.slice(event.description, 0, 93)%>...</p>
-          <p><a href="<%= event_path(@conn, :show, event) %>" class="btn btn-primary" role="button"> View </a>
-            <a href="<%= event_path(@conn, :edit, event) %>" class="btn btn-primary" role="button"> Edit </a>
+          <p><a href="<%= student_event_path(@conn, :show, @student, event) %>" class="btn btn-primary" role="button"> View </a>
+            <a href="<%= student_event_path(@conn, :edit, @student, event) %>" class="btn btn-primary" role="button"> Edit </a>
           </p>
         </div>
       </div>
