--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -10,18 +10,74 @@
     <title>Hello EventsScheduler!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
 
   <body>
     <div class="container">
-      <p>
-        <%= if current_student(@conn) do %>
-          You are logged in
-          <%= link "logout", to: authentication_path(@conn, :delete), method: :delete, class: "btn btn-primary" %>
-        <% else %>
-            <%= link "login", to: session_path(@conn, :new)%>
-        <% end %>
-      </p>
+      <header class="header" style="margin-top: 3px;">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                      data-target="#navbar-collapse" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <%#<a class="navbar-brand" href="#">Brand</a>%>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+              <ul class="nav navbar-nav">
+                <a href="<%= page_path(@conn, :index) %>" style="line-height: 50px; padding-left: 10px">
+                  <span class="glyphicon glyphicon-home" style="padding-right: 5px;">Home</span>
+                </a>
+                <a href="<%= authentication_path(@conn, :index) %>" style="line-height: 50px; padding-left: 10px;">
+                  <span class="glyphicon glyphicon-th-large">MyEvents</span>
+                </a>
+              </ul>
+              <%#<div class="navbar-form navbar-left">%>
+              <%= if logged_in?(@conn) do %>
+              <div class="navbar-form navbar-right">
+                <span class="glyphicon glyphicon-user">
+                <strong><%= name(current_student(@conn).email) %></strong>
+                <button class="btn btn-default dropdown-toggle" type="button" id="menu1"
+                        data-toggle="dropdown" style="background-color: Transparent;">
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                  <li role="presentation" style="line-height: 25px;">
+                    <%= link "Logout", to: authentication_path(@conn, :delete), method: :delete %>
+                  </li>
+                </ul>
+
+              </div>
+              <% else %>
+              <div class="navbar-form navbar-right">
+                <%= form_for @conn, session_path(@conn, :create), [name: :session, class: "navbar-form"], fn f -> %>
+                  <div class="form-group">
+                    <%= email_input f, :email, class: "form-control", placeholder: "email" %>
+                  </div>
+                  <div class="form-group">
+                    <%= password_input f, :password, class: "form-control ", placeholder: "password" %>
+                  </div>
+                  <div class="form-group">
+                    <%= submit "Login", class: "btn btn-primary" %>
+                  </div>
+                <% end %>
+                <%#= link "Register", to: registration_path(@conn, :new), class: "btn btn-primary"%>
+              </div>
+              <% end %>
+
+              <%#</div>%>
+            </div>
+          </div>
+        </nav>
+      </header>
+
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
